--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "smackbone",
-	"version": "0.1.4",
+	"version": "0.1.7",
 	"author": "Peter Bjorklund <piot@hotmail.com>",
 	"description": "an object oriented model framework",
 	"dependencies": {
@@ -15,7 +15,12 @@
 		"url": "https://github.com/piot/smackbone.git"
 	},
 	"devDependencies": {
-		"mocha":  ""
+		"mocha":  "",
+		"should": "",
+		"grunt": "",
+		"grunt-mocha-test": "",
+		"grunt-contrib-coffee": "",
+		"grunt-contrib-concat": ""
 	},
 	"license": "MIT"
 }
