--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "smackbone",
-	"version": "0.1.7",
+	"version": "0.1.8",
 	"author": "Peter Bjorklund <piot@hotmail.com>",
 	"description": "an object oriented model framework",
 	"dependencies": {
 		"underscore": ">=1.4.3"
 	},
 	"scripts": {
-		"test": "bin/test.sh;mocha"
+		"test": "grunt test"
 	},
 	"main": "./out/smackbone.js",
 	"repository": {
