--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
 	"name": "smackbone",
-	"version": "0.1.12",
+	"version": "0.2.0",
 	"author": "Peter Bjorklund <piot@hotmail.com>",
 	"description": "an object oriented model framework",
+	"keywords": [
+		"model",
+		"controller",
+		"event",
+		"server",
+		"client",
+		"browser"
+	],
 	"dependencies": {
 		"underscore": ">=1.4.3"
 	},
