--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "smackbone",
-  "version": "0.2.16",
+  "version": "0.2.17",
   "homepage": "https://github.com/Piot/smackbone",
   "authors": [
     "Peter Bjorklund <piot@hotmail.com>"
@@ -22,5 +22,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "underscore": "~1.8.3"
+  }
 }
